<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registry_notice"
            android:textColor="@color/color_gray"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <cuongnguyen.app.com.shoponline.CustomView.ClearEditText
                android:id="@+id/registry_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registry_name"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <cuongnguyen.app.com.shoponline.CustomView.ClearEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="10dp"
                android:id="@+id/registry_email"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <cuongnguyen.app.com.shoponline.CustomView.PasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="10dp"
                app:useStrike="true"
                app:useCheckValue="true"
                android:id="@+id/registry_password"
                />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mật khẩu phải bao gồm ít nhất 6 ký tự và 1 chữ hoa"
            android:textColor="@color/color_gray"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <cuongnguyen.app.com.shoponline.CustomView.PasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="10dp"
                app:useStrike="true"
                android:id="@+id/registry_repeat_password"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registry_notice_sale"
                android:layout_weight="1"
                android:textColor="@color/text_color" />
            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/turn_rececive_sale"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registry"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:id="@+id/button_registry"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registry_commitment_1"
                    android:textColor="@color/text_color"/>

                <TextView
                    android:id="@+id/rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registry_commitment_2"
                    android:textColor="@color/blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registry_commitment_3"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registry_commitment_4"
                    android:textColor="@color/blue"
                    android:id="@+id/commitment"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registry_commitment_5"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_registry_by"
            android:textColor="@color/text_color"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:weightSum="2">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/facebookiconsmall"
                android:text="Facebook"
                android:layout_margin="5dp"
                android:textColor="@color/colorFacebook"
                android:background="@drawable/custom_login_facebook"
                android:layout_weight="1"
                android:id="@+id/registry_facebook"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/googleplussmall"
                android:text="Google"
                android:layout_margin="5dp"
                android:textColor="@color/colorGoogle"
                android:background="@drawable/custom_login_google"
                android:layout_weight="1"
                android:id="@+id/registry_google"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
