<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <cuongnguyen.app.com.shoponline.CustomView.ClearEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="10dp"
            android:id="@+id/login_email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <cuongnguyen.app.com.shoponline.CustomView.PasswordEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="10dp"
            app:useStrike="true"
            android:id="@+id/login_pass"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="#e16c19"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/login_button"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="end"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_by"
        android:textSize="15dp"
        android:textColor="@color/text_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="2">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/facebookiconsmall"
                android:text="Facebook"
                android:layout_margin="5dp"
                android:textColor="@color/colorFacebook"
                android:background="@drawable/custom_login_facebook"
                android:layout_weight="1"
                android:id="@+id/login_facebook"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/googleplussmall"
                android:text="Google"
                android:layout_margin="5dp"
                android:textColor="@color/colorGoogle"
                android:background="@drawable/custom_login_google"
                android:layout_weight="1"
                android:id="@+id/login_google"/>
    </LinearLayout>
</LinearLayout>
